Fix dark mode auto

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,19 +3,19 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
+  --background: #ffe4e6;
   --foreground: #171717;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #000000;
     --foreground: #ededed;
   }
-}
+} */
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  background: #000000; /* Black background */
+  color: #ffffff; /* White text */
   font-family: Arial, Helvetica, sans-serif;
 }
